mini typo at outdoor category

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -30,7 +30,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}?category=indoor" class="dropdown-item">Indoor</a>
-                <a href="{% url 'products' %}?category=outdoor" class="dropdown-item">Outdoor/a>
+                <a href="{% url 'products' %}?category=outdoor" class="dropdown-item">Outdoor</a>
                 <a href="{% url 'products' %}?category=indoor,outdoor" class="dropdown-item">All Pots</a>
             </div>
         </li>
