icon account & bag

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,9 +49,9 @@
                     <h2 class="logo-font text-black my-0"><img src="media/house_logo.png" width="45" height="45"><strong> Home</strong> Jungle</h2>
                 </a>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 center">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-50">
+                    <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our Jungle">
                         <div class="input-group-append">
                             <button class="form-control btn btn-black border border-black rounded-0" type="submit">
