--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,15 +10,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
+    <div class="container h-200">
+        <div class="row h-200">
             <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Create your own
-                </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Home Jungle</a>
+                        <a href="{% url 'products' %}" class="home-jungle-button btn rounded-0 text-uppercase py-3">Create your own<br>Home Jungle now!</a>
                     </h4>
                 </div>
             </div>
