--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,8 @@ body {
     font-size: xx-large;
     min-width: 280px;
     min-height: 140px;
+    font-family: 'Abril Fatface', cursive;
+    letter-spacing: 0.2em;
 }
 
 .btn-black {
