--- a/static/css/base.css
+++ b/static/css/base.css
@@ -121,6 +121,65 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+/* SLIDER */
+
+.bg-green {
+    background-color:#00450B;
+}
+
+.bg-black {
+    background-color:black;
+}
+.image {
+  width: 100%;
+  height: 30px;
+}
+.images {
+  overflow: hidden;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  font-family: 'Raleway', sans-serif;
+  color: #FFF;
+  text-align: center;
+  font-size: 20px;
+
+}
+.images-inner {
+  width: 500%;
+  transition: all 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+  transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+}
+.image-slide {
+  width: 20%;
+  float: left;
+}
+.image-slide {
+  transition: all 0.5s ease-out;
+}
+
+@keyframes slide {
+  0%, 25.203252032520325%	{ margin-left: 0; }
+  33.333333333333336%, 58.53658536585366%	{ margin-left: -100%; }
+  66.66666666666667%, 91.869918699187%	{ margin-left: -200%; }
+}
+
+.images .images-inner {
+  animation: slide 12300ms infinite;	
+}
+
+@keyframes caption {
+  0%, 33.32333333333334%	{
+    opacity: 1;
+  }
+  33.333333333333336%, 100% {
+    opacity: 0;
+  }
+}
+/* END SLIDER */
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
