--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,19 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div id="delivery-banner" class="row text-center">
-            <div class="col bg-black text-white">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+        <div id="delivery-banner homepage-slider" class="row text-center st-slider">
+            <div class="col bg-black text-white images">
+                <div class="images-inner">
+                    <div class="image-slide">
+                        <div class="image bg-green">New plants coming soon!</div>  
+                    </div>
+                    <div class="image-slide">
+                        <div class="image bg-black">Free delivery on orders over ${{ free_delivery_threshold }}!</div>
+                    </div>
+                    <div class="image-slide">
+                        <div class="image bg-green">Deliveries can take a bit longer than usual.</div>
+                    </div>
+                </div>              
             </div>            
         </div>
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
