added color darkgreen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,7 +100,7 @@ body {
 }
 
 a.category-badge > span.badge:hover {
-    background: #212529 !important;
+    background: #00450B !important;
     color: #fff !important;
 }
 
