--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,6 +19,10 @@ body {
     letter-spacing: 0.1em;
 }
 
+img {
+  border: 2px solid #00450B;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
