--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-5 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0"><i class="fab fa-pagelines"></i><strong> Home</strong> Jungle</h2>
+                    <h1 class="logo-font text-black my-0"><i class="fab fa-pagelines"></i><strong> Home Jungle</strong></h1>
                 </a>
             </div>
             <div class="col-12 col-lg-3 my-auto py-1 py-lg-0">
