--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
-                                <div><i class="fas fa-user-circle fa-lg"></i></div>
+                                <div><i class="fas fa-user-circle fa-2x"></i></div>
                                 <p class="my-0">My Jungle</p>
                             </div>
                         </a>
@@ -98,7 +98,7 @@
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-shopping-basket fa-lg"></i></div>
+                                <div><i class="fas fa-shopping-basket fa-2x"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }}
