--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -13,10 +13,14 @@
 
 {% get_providers as socialaccount_providers %}
 
+<button><a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Login</a></button>
+
 {% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+
+<p>{% blocktrans with site.name as site_name %}
+Please sign in with Facebook. Or, <a href="{{ signup_url }}">sign up</a>
+for a {{ site_name }} account and sign in below:
+{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
 
