--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -8,7 +8,7 @@
 {% block inner_content %}
 
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="logo-font mb-4" style="color: #00450B">{% trans "Password Reset" %}</h2>
     <hr>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
@@ -20,7 +20,7 @@
         {% csrf_token %}
         {{ form|crispy }}
         <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <input type="submit" style="background-color: #5cb85c" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
