--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,7 +382,7 @@ input[name='q']::placeholder {
         padding: 0.15rem;
     }
 
-    .nav-link i.fa-lg {
+    .nav-link i.fa-2x {
         font-size: 1rem;
     }
 
