navbar mobile smaller

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
                         <div class="image bg-black">Free delivery on orders over ${{ free_delivery_threshold }}!</div>
                     </div>
                     <div class="image-slide">
-                        <div class="image bg-green">Deliveries can take a bit longer than usual.</div>
+                        <div class="image bg-green">Deliveries can take longer than usual</div>
                     </div>
                 </div>              
             </div>            
