--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background: url('/media/homepage_image.jpg') no-repeat center center fixed;
+    background: url('/media/homepage_image.jpg') no-repeat center right fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -368,7 +368,6 @@ input[name='q']::placeholder {
 
     body {
         height: calc(100vh - 116px);
-        background: url('/media/homepage_image.jpg') no-repeat right fixed;
     }
 
     .navbar-styling {
