--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
     <hr>
-    <h2 class="logo-font mb-4">{% trans "E-mail Addresses" %}</h2>
+    <h2 class="logo-font mb-4" style="color: #00450B">{% trans "E-mail Addresses" %}</h2>
     <hr>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
@@ -52,7 +52,7 @@
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        <button name="action_add" type="submit" style="background-color: #5cb85c">{% trans "Add E-mail" %}</button>
     </form>
 
 {% endblock %}
