--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -8,7 +8,7 @@
 
 {% block inner_content %}
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="logo-font mb-4" style="color: #00450B">{% trans "Password Reset" %}</h2>
     <hr>
     
     {% if user.is_authenticated %}
