--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 <hr>
-<h2 class="logo-font mb-4">{% trans "Verify Your E-mail Address" %}</h2>
+<h2 class="logo-font mb-4" style="color: #00450B">{% trans "Verify Your E-mail Address" %}</h2>
 <hr>
 
 {% url 'account_email' as email_url %}
